src/parser/y.output
   0  $accept : goal $end

   1  goal : file KW_DOT

   2  file : program
   3       | package
   4       | library
   5       | unit

   6  program : KW_PROGRAM id SEMICOL usesclauseopt main_block
   7          | usesclauseopt main_block

   8  library : KW_LIBRARY id SEMICOL usesclauseopt main_block

   9  unit : KW_UNIT id SEMICOL interfsec implementsec initsec

  10  package : id id SEMICOL requiresclause containsclause KW_END

  11  requiresclause : id idlist SEMICOL

  12  containsclause : id idlist SEMICOL

  13  usesclauseopt :
  14                | KW_USES useidlist SEMICOL

  15  useidlist : useid
  16            | useidlist COMMA useid

  17  useid : id
  18        | id KW_IN string_const

  19  implementsec : KW_IMPL usesclauseopt maindecllist
  20               | KW_IMPL usesclauseopt

  21  interfsec : KW_INTERF usesclauseopt interfdecllist

  22  interfdecllist :
  23                 | interfdecllist interfdecl

  24  initsec : KW_INIT stmtlist KW_END
  25          | KW_FINALIZ stmtlist KW_END
  26          | KW_INIT stmtlist KW_FINALIZ stmtlist KW_END
  27          | block
  28          | KW_END

  29  main_block : maindecllist block
  30             | block

  31  maindecllist : maindeclsec
  32               | maindecllist maindeclsec

  33  declseclist : funcdeclsec
  34              | declseclist funcdeclsec

  35  interfdecl : basicdeclsec
  36             | staticclassopt procproto
  37             | thrvarsec

  38  maindeclsec : basicdeclsec
  39              | thrvarsec
  40              | exportsec
  41              | staticclassopt procdeclnondef
  42              | staticclassopt procdefinition
  43              | labeldeclsec

  44  funcdeclsec : basicdeclsec
  45              | labeldeclsec
  46              | procdefinition
  47              | procdeclnondef

  48  basicdeclsec : constsec
  49               | typesec
  50               | varsec

  51  typesec : KW_TYPE typedecl
  52          | typesec typedecl

  53  labeldeclsec : KW_LABEL labelidlist SEMICOL

  54  labelidlist : labelid
  55              | labelidlist COMMA labelid

  56  labelid : CONST_INT
  57          | id

  58  exportsec : KW_EXPORTS exportsitemlist

  59  exportsitemlist : exportsitem
  60                  | exportsitemlist COMMA exportsitem

  61  exportsitem : id
  62              | id KW_NAME string_const
  63              | id KW_INDEX expr

  64  procdeclnondef : procdefproto func_nondef_list funcdir_strict_opt

  65  procdefinition : procdefproto proc_define SEMICOL

  66  procdefproto : procbasickind qualid formalparams funcretopt SEMICOL funcdir_strict_opt

  67  procproto : procbasickind qualid formalparams funcretopt SEMICOL funcdirectopt

  68  funcretopt :
  69             | COLON funcrettype

  70  staticclassopt :
  71                 | KW_CLASS

  72  procbasickind : KW_FUNCTION
  73                | KW_PROCEDURE
  74                | KW_CONSTRUCTOR
  75                | KW_DESTRUCTOR

  76  proceduretype : KW_PROCEDURE formalparams ofobjectopt
  77                | KW_FUNCTION formalparams COLON funcrettype ofobjectopt

  78  ofobjectopt :
  79              | KW_OF KW_OBJECT

  80  proc_define : func_block
  81              | assemblerstmt

  82  func_block : declseclist block
  83             | block

  84  formalparams :
  85               | LPAREN RPAREN
  86               | LPAREN formalparamslist RPAREN

  87  formalparamslist : formalparm
  88                   | formalparamslist SEMICOL formalparm

  89  formalparm : paramqualif idlist paramtypeopt
  90             | idlist paramtypespec paraminitopt
  91             | KW_CONST idlist paramtypeopt paraminitopt

  92  paramqualif : KW_VAR
  93              | KW_OUT

  94  paramtypeopt :
  95               | paramtypespec

  96  paramtypespec : COLON funcparamtype

  97  paraminitopt :
  98               | KW_EQ expr

  99  funcdirectopt :
 100                | funcdirective_list SEMICOL

 101  funcdirectopt_nonterm :
 102                        | funcdirective_list

 103  funcdir_strict_opt :
 104                     | funcdir_strict_list

 105  funcdirective_list : funcdirective
 106                     | funcdirective_list SEMICOL funcdirective

 107  funcdir_strict_list : funcdir_strict SEMICOL
 108                      | funcdir_strict_list funcdir_strict SEMICOL

 109  func_nondef_list : funcdir_nondef SEMICOL
 110                   | func_nondef_list funcdir_nondef SEMICOL

 111  funcdirective : funcdir_strict
 112                | funcdir_nondef

 113  funcdir_strict : funcqualif
 114                 | funccallconv

 115  funcdir_nondef : KW_EXTERNAL string_const externarg
 116                 | KW_EXTERNAL qualid externarg
 117                 | KW_EXTERNAL
 118                 | KW_FORWARD

 119  externarg :
 120            | id string_const
 121            | id qualid

 122  funcqualif : KW_ABSOLUTE
 123             | KW_ABSTRACT
 124             | KW_ASSEMBLER
 125             | KW_DYNAMIC
 126             | KW_EXPORT
 127             | KW_INLINE
 128             | KW_OVERRIDE
 129             | KW_OVERLOAD
 130             | KW_REINTRODUCE
 131             | KW_VIRTUAL
 132             | KW_VARARGS

 133  funccallconv : KW_PASCAL
 134               | KW_SAFECALL
 135               | KW_STDCALL
 136               | KW_CDECL
 137               | KW_REGISTER

 138  block : KW_BEGIN stmtlist KW_END

 139  stmtlist : stmt SEMICOL stmtlist
 140           | stmt

 141  stmt : nonlbl_stmt
 142       | labelid COLON nonlbl_stmt

 143  nonlbl_stmt :
 144              | inheritstmts
 145              | goto_stmt
 146              | block
 147              | ifstmt
 148              | casestmt
 149              | repeatstmt
 150              | whilestmt
 151              | forstmt
 152              | with_stmt
 153              | tryexceptstmt
 154              | tryfinallystmt
 155              | raisestmt
 156              | assemblerstmt

 157  inheritstmts : KW_INHERITED
 158               | KW_INHERITED assign
 159               | KW_INHERITED proccall
 160               | proccall
 161               | assign

 162  assign : lvalue KW_ASSIGN expr
 163         | lvalue KW_ASSIGN KW_INHERITED expr

 164  goto_stmt : KW_GOTO labelid

 165  ifstmt : KW_IF expr KW_THEN nonlbl_stmt KW_ELSE nonlbl_stmt
 166         | KW_IF expr KW_THEN nonlbl_stmt

 167  casestmt : KW_CASE expr KW_OF caseselectorlist else_case KW_END

 168  else_case :
 169            | KW_ELSE nonlbl_stmt
 170            | KW_ELSE nonlbl_stmt SEMICOL

 171  caseselectorlist : caseselector
 172                   | caseselectorlist SEMICOL caseselector

 173  caseselector :
 174               | caselabellist COLON nonlbl_stmt

 175  caselabellist : caselabel
 176                | caselabellist COMMA caselabel

 177  caselabel : expr
 178            | expr KW_RANGE expr

 179  repeatstmt : KW_REPEAT stmtlist KW_UNTIL expr

 180  whilestmt : KW_WHILE expr KW_DO nonlbl_stmt

 181  forstmt : KW_FOR id KW_ASSIGN expr KW_TO expr KW_DO nonlbl_stmt
 182          | KW_FOR id KW_ASSIGN expr KW_DOWNTO expr KW_DO nonlbl_stmt

 183  with_stmt : KW_WITH exprlist KW_DO nonlbl_stmt

 184  tryexceptstmt : KW_TRY stmtlist KW_EXCEPT exceptionblock KW_END

 185  exceptionblock : onlist KW_ELSE stmtlist
 186                 | onlist
 187                 | stmtlist

 188  onlist : ondef
 189         | onlist ondef

 190  ondef : KW_ON id COLON id KW_DO nonlbl_stmt SEMICOL
 191        | KW_ON id KW_DO nonlbl_stmt SEMICOL

 192  tryfinallystmt : KW_TRY stmtlist KW_FINALLY stmtlist KW_END

 193  raisestmt : KW_RAISE
 194            | KW_RAISE lvalue
 195            | KW_RAISE KW_AT expr
 196            | KW_RAISE lvalue KW_AT expr

 197  assemblerstmt : KW_ASM asmcode KW_END

 198  asmcode : ASM_OP
 199          | asmcode ASM_OP

 200  varsec : KW_VAR vardecllist

 201  thrvarsec : KW_THRVAR vardecllist

 202  vardecllist : vardecl
 203              | vardecllist vardecl

 204  vardecl : idlist COLON vartype vardeclopt SEMICOL
 205          | idlist COLON proceduretype SEMICOL funcdirectopt
 206          | idlist COLON proceduretype SEMICOL funcdirectopt_nonterm KW_EQ CONST_NIL SEMICOL

 207  vardeclopt :
 208             | KW_ABSOLUTE id
 209             | KW_EQ constexpr

 210  proccall : id
 211           | lvalue KW_DOT id
 212           | lvalue LPAREN exprlistopt RPAREN
 213           | lvalue LPAREN casttype RPAREN

 214  lvalue : proccall
 215         | expr KW_DEREF
 216         | lvalue LBRAC exprlist RBRAC
 217         | string_const LBRAC exprlist RBRAC
 218         | casttype LPAREN exprlistopt RPAREN

 219  expr : literal
 220       | lvalue
 221       | setconstructor
 222       | KW_ADDR expr
 223       | KW_NOT expr
 224       | sign expr
 225       | LPAREN expr RPAREN
 226       | expr relop expr
 227       | expr addop expr
 228       | expr mulop expr

 229  sign : KW_SUB
 230       | KW_SUM

 231  mulop : KW_MUL
 232        | KW_DIV
 233        | KW_QUOT
 234        | KW_MOD
 235        | KW_SHR
 236        | KW_SHL
 237        | KW_AND

 238  addop : KW_SUB
 239        | KW_SUM
 240        | KW_OR
 241        | KW_XOR

 242  relop : KW_EQ
 243        | KW_DIFF
 244        | KW_LT
 245        | KW_LE
 246        | KW_GT
 247        | KW_GE
 248        | KW_IN
 249        | KW_IS
 250        | KW_AS

 251  literal : CONST_INT
 252          | CONST_BOOL
 253          | CONST_REAL
 254          | CONST_NIL
 255          | string_const

 256  discrete : CONST_INT
 257           | CONST_CHAR
 258           | CONST_BOOL

 259  string_const : CONST_STR
 260               | CONST_CHAR
 261               | string_const CONST_STR
 262               | string_const CONST_CHAR

 263  id : IDENTIFIER

 264  idlist : id
 265         | idlist COMMA id

 266  qualid : id
 267         | qualid KW_DOT id

 268  exprlist : expr
 269           | exprlist COMMA expr

 270  exprlistopt :
 271              | exprlist

 272  rangetype : sign rangestart KW_RANGE expr
 273            | rangestart KW_RANGE expr

 274  rangestart : discrete
 275             | qualid
 276             | id LPAREN casttype RPAREN
 277             | id LPAREN literal RPAREN

 278  enumtype : LPAREN enumtypeellist RPAREN

 279  enumtypeellist : enumtypeel
 280                 | enumtypeellist COMMA enumtypeel

 281  enumtypeel : id
 282             | id KW_EQ expr

 283  setconstructor : LBRAC RBRAC
 284                 | LBRAC setlist RBRAC

 285  setlist : setelem
 286          | setlist COMMA setelem

 287  setelem : expr
 288          | expr KW_RANGE expr

 289  constsec : KW_CONST constdecl
 290           | constsec constdecl

 291  constdecl : id KW_EQ constexpr SEMICOL
 292            | id COLON vartype KW_EQ constexpr SEMICOL

 293  constexpr : expr
 294            | arrayconst
 295            | recordconst

 296  arrayconst : LPAREN constexpr COMMA constexprlist RPAREN

 297  constexprlist : constexpr
 298                | constexprlist COMMA constexpr

 299  recordconst : LPAREN fieldconstlist RPAREN
 300              | LPAREN fieldconstlist SEMICOL RPAREN

 301  fieldconstlist : fieldconst
 302                 | fieldconstlist SEMICOL fieldconst

 303  fieldconst : id COLON constexpr

 304  classtype : class_keyword heritage class_struct_opt KW_END
 305            | class_keyword heritage

 306  class_keyword : KW_CLASS
 307                | KW_OBJECT
 308                | KW_RECORD

 309  heritage :
 310           | LPAREN idlist RPAREN

 311  class_struct_opt : fieldlist complist scopeseclist

 312  scopeseclist :
 313               | scopeseclist scopesec

 314  scopesec : scope_decl fieldlist complist

 315  scope_decl : KW_PUBLISHED
 316             | KW_PUBLIC
 317             | KW_PROTECTED
 318             | KW_PRIVATE

 319  fieldlist :
 320            | fieldlist objfield

 321  complist :
 322           | complist class_comp

 323  objfield : idlist COLON type SEMICOL

 324  class_comp : staticclassopt procproto
 325             | property

 326  interftype : KW_INTERF heritage classmethodlistopt classproplistopt KW_END

 327  classmethodlistopt : methodlist
 328                     |

 329  methodlist : procproto
 330             | methodlist procproto

 331  classproplistopt : classproplist
 332                   |

 333  classproplist : property
 334                | classproplist property

 335  property : KW_PROPERTY id SEMICOL
 336           | KW_PROPERTY id propinterfopt COLON funcrettype indexspecopt propspecifiers SEMICOL defaultdiropt

 337  defaultdiropt :
 338                | id SEMICOL

 339  propinterfopt :
 340                | LBRAC idlisttypeidlist RBRAC

 341  idlisttypeidlist : idlisttypeid
 342                   | idlisttypeidlist SEMICOL idlisttypeid

 343  idlisttypeid : idlist COLON funcparamtype
 344               | KW_CONST idlist COLON funcparamtype

 345  indexspecopt :
 346               | KW_INDEX expr

 347  propspecifiers :
 348                 | id id
 349                 | id id id id
 350                 | id id id id id id
 351                 | id id id id id id id id
 352                 | id id id id id id id id id id

 353  typedecl : id KW_EQ typeopt vartype SEMICOL
 354           | id KW_EQ typeopt proceduretype SEMICOL funcdirectopt

 355  typeopt :
 356          | KW_TYPE

 357  type : vartype
 358       | proceduretype

 359  vartype : simpletype
 360          | enumtype
 361          | rangetype
 362          | varianttype
 363          | refpointertype
 364          | classreftype
 365          | KW_PACKED packedtype
 366          | packedtype

 367  packedtype : structype
 368             | restrictedtype

 369  classreftype : KW_CLASS KW_OF scalartype

 370  simpletype : scalartype
 371             | realtype
 372             | stringtype
 373             | TYPE_PTR

 374  ordinaltype : enumtype
 375              | rangetype
 376              | scalartype

 377  scalartype : inttype
 378             | chartype
 379             | qualid

 380  realtype : TYPE_REAL48
 381           | TYPE_FLOAT
 382           | TYPE_DOUBLE
 383           | TYPE_EXTENDED
 384           | TYPE_CURR
 385           | TYPE_COMP

 386  inttype : TYPE_BYTE
 387          | TYPE_BOOL
 388          | TYPE_INT
 389          | TYPE_SHORTINT
 390          | TYPE_SMALLINT
 391          | TYPE_LONGINT
 392          | TYPE_INT64
 393          | TYPE_UINT64
 394          | TYPE_WORD
 395          | TYPE_LONGWORD
 396          | TYPE_CARDINAL

 397  chartype : TYPE_CHAR
 398           | TYPE_WIDECHAR

 399  stringtype : TYPE_STR
 400             | TYPE_PCHAR
 401             | TYPE_STR LBRAC expr RBRAC
 402             | TYPE_SHORTSTR
 403             | TYPE_WIDESTR

 404  varianttype : TYPE_VAR
 405              | TYPE_OLEVAR

 406  structype : arraytype
 407            | settype
 408            | filetype

 409  restrictedtype : classtype
 410                 | interftype

 411  arraysizelist : rangetype
 412                | arraysizelist COMMA rangetype

 413  arraytype : TYPE_ARRAY LBRAC arraytypedef RBRAC KW_OF type
 414            | TYPE_ARRAY KW_OF type

 415  arraytypedef : arraysizelist
 416               | inttype
 417               | chartype
 418               | qualid

 419  settype : TYPE_SET KW_OF ordinaltype

 420  filetype : TYPE_FILE KW_OF type
 421           | TYPE_FILE

 422  refpointertype : KW_DEREF type

 423  funcparamtype : simpletype
 424                | TYPE_ARRAY KW_OF simpletype

 425  funcrettype : simpletype

 426  casttype : inttype
 427           | chartype
 428           | realtype
 429           | stringtype
 430           | TYPE_PTR

state 0
	$accept : . goal $end  (0)
	usesclauseopt : .  (13)

	KW_LIBRARY  shift 1
	KW_UNIT  shift 2
	KW_PROGRAM  shift 3
	KW_USES  shift 4
	IDENTIFIER  shift 5
	KW_EXPORTS  reduce 13
	KW_CLASS  reduce 13
	KW_FUNCTION  reduce 13
	KW_PROCEDURE  reduce 13
	KW_CONST  reduce 13
	KW_VAR  reduce 13
	KW_THRVAR  reduce 13
	KW_TYPE  reduce 13
	KW_CONSTRUCTOR  reduce 13
	KW_DESTRUCTOR  reduce 13
	KW_BEGIN  reduce 13
	KW_LABEL  reduce 13

	goal  goto 6
	file  goto 7
	program  goto 8
	package  goto 9
	library  goto 10
	unit  goto 11
	id  goto 12
	usesclauseopt  goto 13


state 1
	library : KW_LIBRARY . id SEMICOL usesclauseopt main_block  (8)

	IDENTIFIER  shift 5
	.  error

	id  goto 14


state 2
	unit : KW_UNIT . id SEMICOL interfsec implementsec initsec  (9)

	IDENTIFIER  shift 5
	.  error

	id  goto 15


state 3
	program : KW_PROGRAM . id SEMICOL usesclauseopt main_block  (6)

	IDENTIFIER  shift 5
	.  error

	id  goto 16


state 4
	usesclauseopt : KW_USES . useidlist SEMICOL  (14)

	IDENTIFIER  shift 5
	.  error

	id  goto 17
	useidlist  goto 18
	useid  goto 19


state 5
	id : IDENTIFIER .  (263)

	.  reduce 263


state 6
	$accept : goal . $end  (0)

	$end  accept


state 7
	goal : file . KW_DOT  (1)

	KW_DOT  shift 20
	.  error


state 8
	file : program .  (2)

	.  reduce 2


state 9
	file : package .  (3)

	.  reduce 3


state 10
	file : library .  (4)

	.  reduce 4


state 11
	file : unit .  (5)

	.  reduce 5


state 12
	package : id . id SEMICOL requiresclause containsclause KW_END  (10)

	IDENTIFIER  shift 5
	.  error

	id  goto 21


state 13
	program : usesclauseopt . main_block  (7)
	staticclassopt : .  (70)

	KW_EXPORTS  shift 22
	KW_CLASS  shift 23
	KW_CONST  shift 24
	KW_VAR  shift 25
	KW_THRVAR  shift 26
	KW_TYPE  shift 27
	KW_BEGIN  shift 28
	KW_LABEL  shift 29
	KW_FUNCTION  reduce 70
	KW_PROCEDURE  reduce 70
	KW_CONSTRUCTOR  reduce 70
	KW_DESTRUCTOR  reduce 70

	main_block  goto 30
	maindecllist  goto 31
	block  goto 32
	maindeclsec  goto 33
	basicdeclsec  goto 34
	staticclassopt  goto 35
	thrvarsec  goto 36
	exportsec  goto 37
	labeldeclsec  goto 38
	constsec  goto 39
	typesec  goto 40
	varsec  goto 41


state 14
	library : KW_LIBRARY id . SEMICOL usesclauseopt main_block  (8)

	SEMICOL  shift 42
	.  error


state 15
	unit : KW_UNIT id . SEMICOL interfsec implementsec initsec  (9)

	SEMICOL  shift 43
	.  error


state 16
	program : KW_PROGRAM id . SEMICOL usesclauseopt main_block  (6)

	SEMICOL  shift 44
	.  error


state 17
	useid : id .  (17)
	useid : id . KW_IN string_const  (18)

	KW_IN  shift 45
	COMMA  reduce 17
	SEMICOL  reduce 17


state 18
	usesclauseopt : KW_USES useidlist . SEMICOL  (14)
	useidlist : useidlist . COMMA useid  (16)

	COMMA  shift 46
	SEMICOL  shift 47
	.  error


state 19
	useidlist : useid .  (15)

	.  reduce 15


state 20
	goal : file KW_DOT .  (1)

	.  reduce 1


state 21
	package : id id . SEMICOL requiresclause containsclause KW_END  (10)

	SEMICOL  shift 48
	.  error


state 22
	exportsec : KW_EXPORTS . exportsitemlist  (58)

	IDENTIFIER  shift 5
	.  error

	id  goto 49
	exportsitemlist  goto 50
	exportsitem  goto 51


state 23
	staticclassopt : KW_CLASS .  (71)

	.  reduce 71


state 24
	constsec : KW_CONST . constdecl  (289)

	IDENTIFIER  shift 5
	.  error

	id  goto 52
	constdecl  goto 53


state 25
	varsec : KW_VAR . vardecllist  (200)

	IDENTIFIER  shift 5
	.  error

	id  goto 54
	idlist  goto 55
	vardecllist  goto 56
	vardecl  goto 57


state 26
	thrvarsec : KW_THRVAR . vardecllist  (201)

	IDENTIFIER  shift 5
	.  error

	id  goto 54
	idlist  goto 55
	vardecllist  goto 58
	vardecl  goto 57


state 27
	typesec : KW_TYPE . typedecl  (51)

	IDENTIFIER  shift 5
	.  error

	id  goto 59
	typedecl  goto 60


state 28
	block : KW_BEGIN . stmtlist KW_END  (138)
	nonlbl_stmt : .  (143)

	KW_INHERITED  shift 61
	KW_ASM  shift 62
	KW_BEGIN  shift 28
	KW_WITH  shift 63
	KW_FOR  shift 64
	KW_REPEAT  shift 65
	KW_WHILE  shift 66
	KW_IF  shift 67
	KW_CASE  shift 68
	KW_GOTO  shift 69
	KW_RAISE  shift 70
	KW_TRY  shift 71
	TYPE_INT64  shift 72
	TYPE_INT  shift 73
	TYPE_LONGINT  shift 74
	TYPE_LONGWORD  shift 75
	TYPE_SMALLINT  shift 76
	TYPE_SHORTINT  shift 77
	TYPE_WORD  shift 78
	TYPE_BYTE  shift 79
	TYPE_CARDINAL  shift 80
	TYPE_UINT64  shift 81
	TYPE_CHAR  shift 82
	TYPE_PCHAR  shift 83
	TYPE_WIDECHAR  shift 84
	TYPE_WIDESTR  shift 85
	TYPE_STR  shift 86
	TYPE_SHORTSTR  shift 87
	TYPE_FLOAT  shift 88
	TYPE_REAL48  shift 89
	TYPE_DOUBLE  shift 90
	TYPE_EXTENDED  shift 91
	TYPE_BOOL  shift 92
	TYPE_COMP  shift 93
	TYPE_CURR  shift 94
	TYPE_PTR  shift 95
	CONST_INT  shift 96
	CONST_REAL  shift 97
	CONST_CHAR  shift 98
	CONST_STR  shift 99
	IDENTIFIER  shift 5
	CONST_NIL  shift 100
	CONST_BOOL  shift 101
	KW_SUM  shift 102
	KW_SUB  shift 103
	KW_NOT  shift 104
	KW_ADDR  shift 105
	LBRAC  shift 106
	LPAREN  shift 107
	KW_END  reduce 143
	SEMICOL  reduce 143

	id  goto 108
	string_const  goto 109
	stmtlist  goto 110
	block  goto 111
	labelid  goto 112
	expr  goto 113
	assemblerstmt  goto 114
	stmt  goto 115
	nonlbl_stmt  goto 116
	inheritstmts  goto 117
	goto_stmt  goto 118
	ifstmt  goto 119
	casestmt  goto 120
	repeatstmt  goto 121
	whilestmt  goto 122
	forstmt  goto 123
	with_stmt  goto 124
	tryexceptstmt  goto 125
	tryfinallystmt  goto 126
	raisestmt  goto 127
	assign  goto 128
	proccall  goto 129
	lvalue  goto 130
	casttype  goto 131
	literal  goto 132
	setconstructor  goto 133
	sign  goto 134
	realtype  goto 135
	stringtype  goto 136
	inttype  goto 137
	chartype  goto 138


state 29
	labeldeclsec : KW_LABEL . labelidlist SEMICOL  (53)

	CONST_INT  shift 139
	IDENTIFIER  shift 5
	.  error

	id  goto 140
	labelidlist  goto 141
	labelid  goto 142


state 30
	program : usesclauseopt main_block .  (7)

	.  reduce 7


state 31
	main_block : maindecllist . block  (29)
	maindecllist : maindecllist . maindeclsec  (32)
	staticclassopt : .  (70)

	KW_EXPORTS  shift 22
	KW_CLASS  shift 23
	KW_CONST  shift 24
	KW_VAR  shift 25
	KW_THRVAR  shift 26
	KW_TYPE  shift 27
	KW_BEGIN  shift 28
	KW_LABEL  shift 29
	KW_FUNCTION  reduce 70
	KW_PROCEDURE  reduce 70
	KW_CONSTRUCTOR  reduce 70
	KW_DESTRUCTOR  reduce 70

	block  goto 143
	maindeclsec  goto 144
	basicdeclsec  goto 34
	staticclassopt  goto 35
	thrvarsec  goto 36
	exportsec  goto 37
	labeldeclsec  goto 38
	constsec  goto 39
	typesec  goto 40
	varsec  goto 41


state 32
	main_block : block .  (30)

	.  reduce 30


state 33
	maindecllist : maindeclsec .  (31)

	.  reduce 31


state 34
	maindeclsec : basicdeclsec .  (38)

	.  reduce 38


state 35
	maindeclsec : staticclassopt . procdeclnondef  (41)
	maindeclsec : staticclassopt . procdefinition  (42)

	KW_FUNCTION  shift 145
	KW_PROCEDURE  shift 146
	KW_CONSTRUCTOR  shift 147
	KW_DESTRUCTOR  shift 148
	.  error

	procdeclnondef  goto 149
	procdefinition  goto 150
	procdefproto  goto 151
	procbasickind  goto 152


state 36
	maindeclsec : thrvarsec .  (39)

	.  reduce 39


state 37
	maindeclsec : exportsec .  (40)

	.  reduce 40


state 38
	maindeclsec : labeldeclsec .  (43)

	.  reduce 43


state 39
	basicdeclsec : constsec .  (48)
	constsec : constsec . constdecl  (290)

	IDENTIFIER  shift 5
	KW_EXPORTS  reduce 48
	KW_IMPL  reduce 48
	KW_FINALIZ  reduce 48
	KW_INIT  reduce 48
	KW_CLASS  reduce 48
	KW_FUNCTION  reduce 48
	KW_PROCEDURE  reduce 48
	KW_CONST  reduce 48
	KW_VAR  reduce 48
	KW_THRVAR  reduce 48
	KW_TYPE  reduce 48
	KW_CONSTRUCTOR  reduce 48
	KW_DESTRUCTOR  reduce 48
	KW_BEGIN  reduce 48
	KW_END  reduce 48
	KW_LABEL  reduce 48

	id  goto 52
	constdecl  goto 153


state 40
	basicdeclsec : typesec .  (49)
	typesec : typesec . typedecl  (52)

	IDENTIFIER  shift 5
	KW_EXPORTS  reduce 49
	KW_IMPL  reduce 49
	KW_FINALIZ  reduce 49
	KW_INIT  reduce 49
	KW_CLASS  reduce 49
	KW_FUNCTION  reduce 49
	KW_PROCEDURE  reduce 49
	KW_CONST  reduce 49
	KW_VAR  reduce 49
	KW_THRVAR  reduce 49
	KW_TYPE  reduce 49
	KW_CONSTRUCTOR  reduce 49
	KW_DESTRUCTOR  reduce 49
	KW_BEGIN  reduce 49
	KW_END  reduce 49
	KW_LABEL  reduce 49

	id  goto 59
	typedecl  goto 154


state 41
	basicdeclsec : varsec .  (50)

	.  reduce 50


state 42
	library : KW_LIBRARY id SEMICOL . usesclauseopt main_block  (8)
	usesclauseopt : .  (13)

	KW_USES  shift 4
	KW_EXPORTS  reduce 13
	KW_CLASS  reduce 13
	KW_FUNCTION  reduce 13
	KW_PROCEDURE  reduce 13
	KW_CONST  reduce 13
	KW_VAR  reduce 13
	KW_THRVAR  reduce 13
	KW_TYPE  reduce 13
	KW_CONSTRUCTOR  reduce 13
	KW_DESTRUCTOR  reduce 13
	KW_BEGIN  reduce 13
	KW_LABEL  reduce 13

	usesclauseopt  goto 155


state 43
	unit : KW_UNIT id SEMICOL . interfsec implementsec initsec  (9)

	KW_INTERF  shift 156
	.  error

	interfsec  goto 157


state 44
	program : KW_PROGRAM id SEMICOL . usesclauseopt main_block  (6)
	usesclauseopt : .  (13)

	KW_USES  shift 4
	KW_EXPORTS  reduce 13
	KW_CLASS  reduce 13
	KW_FUNCTION  reduce 13
	KW_PROCEDURE  reduce 13
	KW_CONST  reduce 13
	KW_VAR  reduce 13
	KW_THRVAR  reduce 13
	KW_TYPE  reduce 13
	KW_CONSTRUCTOR  reduce 13
	KW_DESTRUCTOR  reduce 13
	KW_BEGIN  reduce 13
	KW_LABEL  reduce 13

	usesclauseopt  goto 158


state 45
	useid : id KW_IN . string_const  (18)

	CONST_CHAR  shift 98
	CONST_STR  shift 99
	.  error

	string_const  goto 159


state 46
	useidlist : useidlist COMMA . useid  (16)

	IDENTIFIER  shift 5
	.  error

	id  goto 17
	useid  goto 160


state 47
	usesclauseopt : KW_USES useidlist SEMICOL .  (14)

	.  reduce 14


state 48
	package : id id SEMICOL . requiresclause containsclause KW_END  (10)

	IDENTIFIER  shift 5
	.  error

	id  goto 161
	requiresclause  goto 162


state 49
	exportsitem : id .  (61)
	exportsitem : id . KW_NAME string_const  (62)
	exportsitem : id . KW_INDEX expr  (63)

	KW_NAME  shift 163
	KW_INDEX  shift 164
	KW_EXPORTS  reduce 61
	KW_FINALIZ  reduce 61
	KW_INIT  reduce 61
	KW_CLASS  reduce 61
	KW_FUNCTION  reduce 61
	KW_PROCEDURE  reduce 61
	KW_CONST  reduce 61
	KW_VAR  reduce 61
	KW_THRVAR  reduce 61
	KW_TYPE  reduce 61
	KW_CONSTRUCTOR  reduce 61
	KW_DESTRUCTOR  reduce 61
	KW_BEGIN  reduce 61
	KW_END  reduce 61
	KW_LABEL  reduce 61
	COMMA  reduce 61


state 50
	exportsec : KW_EXPORTS exportsitemlist .  (58)
	exportsitemlist : exportsitemlist . COMMA exportsitem  (60)

	COMMA  shift 165
	KW_EXPORTS  reduce 58
	KW_FINALIZ  reduce 58
	KW_INIT  reduce 58
	KW_CLASS  reduce 58
	KW_FUNCTION  reduce 58
	KW_PROCEDURE  reduce 58
	KW_CONST  reduce 58
	KW_VAR  reduce 58
	KW_THRVAR  reduce 58
	KW_TYPE  reduce 58
